--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,13 @@ body {
   
 header {
     background: #333;
+    margin-bottom: 10px;
+    border-bottom: 5px;
+    border-bottom-color: black;
 }
 
 h1 {
     background-color: #4aaaa5;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-right: 10px;
-    margin-left: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-right: 5px;
@@ -45,10 +44,18 @@ footer {
     background-color: ;
 }
 
-#porfolio-entry {
+#portfolio-wrapper {
 
 }
 
-#portfolio-image {
+.porfolio-entry {
+
+}
+
+.portfolio-image {
+
+}
+
+.portfolio-title {
 
 }
