--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,48 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    font-size: 18px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 14px;
     line-height: 150%;
-    color: #333;
-    background: #efeee7;
+    color: #777777;
   }
   
 header {
-    background: #333;
-    margin-bottom: 10px;
-    border-bottom: 5px;
-    border-bottom-color: black;
+    align-content: center;
+    background: #ffffff;
+    margin-bottom: 20px;
+    border-bottom: 4px solid #cccccc;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 h1 {
     background-color: #4aaaa5;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-right: 5px;
-    padding-left: 5px;
+    margin-bottom: 0px;
+    padding-top: 10px;
+    color: #ffffff;
+    padding-bottom: 10px;
+    padding-right: 15px;
+    padding-left: 15px;
+    font-size: 22px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
+h2 {
+    margin-bottom: 0px;
+    margin-top: 10px;
+    padding-top: 10px;
+    color: #4aaaa5;
+    /* padding-bottom: 10px; */
+    padding-right: 5px;
+    padding-left: 5px;
+    font-size: 22px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
 .container {
-    width: 960px;px;
     margin: 0 auto;
+    width: 960px;
+    border: 2px solid #dddddd;
+    background: #ffffff;
 }
 
 .navBar {
@@ -37,11 +54,12 @@ h1 {
     float: left;
     width:200px;
     height:150px;
-    padding-right: 5px;
+    margin-right: 20px;
 }
 
 footer {
-    background-color: ;
+    background: #666666;
+    border-top: 8px solid #4aaaa5;
 }
 
 #portfolio-wrapper {
@@ -57,5 +75,21 @@ footer {
 }
 
 .portfolio-title {
+    text-align: center;
+    background: #4aaaa5;
+}
 
+#submit-contact-btn{
+    background-color: #4aaaa5;
+    padding-top: 5px;
+    color: #ffffff;
+    padding-bottom: 5px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-bottom: 20px;
+}
+
+.nav-link {
+    color: #666666;
+    margin-top: 5px;
 }
