--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,6 @@ h2 {
     margin-top: 10px;
     padding-top: 10px;
     color: #4aaaa5;
-    /* padding-bottom: 10px; */
     padding-right: 5px;
     padding-left: 5px;
     font-size: 22px;
@@ -49,6 +48,7 @@ h2 {
     display: flex;
     justify-content: space-between;
     width: 960px;
+    margin: 0 auto;
 }
 
 #bio-image {
