--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 body {
     padding: 0;
-    margin: 0;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 14px;
     line-height: 150%;
@@ -61,6 +60,7 @@ h2 {
 footer {
     background: #666666;
     border-top: 8px solid #4aaaa5;
+    margin-top: 20px;
 }
 
 .portfolio-wrapper {
