--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,19 @@
 body {
+    height: 100%;
     padding: 0;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 14px;
     line-height: 150%;
     color: #777777;
+    display: flex;
+    flex-direction: column;
+    background-image:url(../images/dark-honeycomb.png);
+    /* Background pattern from Toptal Subtle Patterns */
   }
+
+html {
+    height: 100%;
+}
   
 header {
     align-content: center;
@@ -41,6 +50,7 @@ h2 {
     width: 960px;
     border: 2px solid #dddddd;
     background: #ffffff;
+    flex: 1 0 auto;
 }
 
 .navBar {
@@ -61,7 +71,12 @@ footer {
     background: #666666;
     border-top: 8px solid #4aaaa5;
     margin-top: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    text-align: center;
+    flex-shrink: 0;
 }
+
 
 .portfolio-wrapper {
     margin-left: 20px;
