--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,9 +45,11 @@ h2 {
     font-size: 22px;
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
+
 .container {
     margin: 0 auto;
     width: 960px;
+    height: 700px;
     border: 2px solid #dddddd;
     background: #ffffff;
     flex: 1 0 auto;
